# kormek

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/prompts/: kormek-plan.prompt.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: rooms.py  ws.py  youtube.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/sockets/: manager.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatSidebar.tsx  ShareModal.tsx  VideoCallGrid.tsx  VideoPlayer.tsx  YouTubeSearch.tsx
frontend/src/hooks/: api.ts  useWebRTC.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  RoomPage.tsx
frontend/src/store/: useRoomStore.ts
