[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pytubefix>=8.0.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
